# bookshop-rs

./: Cargo.toml  README.md  Rocket.toml  clippy_edits.txt  ex_commands.md  ex_commands.txt  init.sql  log4rs.yaml
logs/error/: error_log.txt
logs/info/: info_log.txt
logs/warn/: warn_log.txt
src/: main.rs
src/db/: books.rs  customers.rs  database.rs  db.rs  mod.rs  purchaseOrders.rs  purchase_orders.rs
src/handlers/: books.rs  customers.rs  mod.rs  orders.rs  purchase_orders.rs
src/input_validation/: general_iv.rs  mod.rs
