[package]
name = "bookshop-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = "1.0.158"

[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ["json"]
