[package]
name = "bookshop-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = "1.0.158"
log = "0.4.17"
log4rs = "1.2.0"
regex = "1.7.3"

[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ["json"]
